progressive-rollout-with-baseline-analysis/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-canary-spin
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: issuegen-ingress
spec:
  rules:
  - host: argo-baseline-analysis.aoa.oes.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: issuegen-svc
            port:
              number: 3100
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - argo-baseline-analysis.aoa.oes.opsmx.org
    secretName: issuegen-authtls
